syntax = "proto3";

package pb;

import "journal.proto";
import "dtypes.proto";

option go_package = "remind/journal/pb";

message CreateJournalRequest {
    string username = 1;
    string title = 2;
    string content = 3;
    bool status = 4;
    repeated bytes images = 6;
    repeated bytes audios = 7;
}

message CreateJournalResponse {
    Journal journal = 1;
    repeated Image images = 2;
    repeated Audio audios = 3;
}

message DeleteJournalRequest {
    int64 id = 1;
    string username = 2;
}

message DeleteJournalResponse {
    bool success = 1;
}

message UpdateJournalRequest {
    int64 id = 1;
    string username = 2;
    optional string title = 3;
    optional string content = 4;
    optional bool status = 5;
}

message UpdateJournalResponse {
    Journal journal = 1;
}

message AddImageRequest {
    int64 journal_id = 1;
    string username = 2;
    bytes content = 3;
}

message AddImageResponse {
    Image image = 1;
}

message DeleteImageRequest {
    int64 id = 1;
    int64 journal_id = 2;
    string username = 3;
}

message DeleteImageResponse {
    bool success = 1;
}

message AddAudioRequest {
    int64 journal_id = 1;
    string username = 2;
    bytes content = 3;
}

message AddAudioResponse {
    Audio audio = 1;
}

message DeleteAudioRequest {
    int64 id = 1;
    int64 journal_id = 2;
    string username = 3;
}

message DeleteAudioResponse {
    bool success = 1;
}